working auth and data populate. and modal

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Book Goals</title>
+	<title>Readable</title>
 	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="normalize.css">
 </head>
 <body ng-app="readingGoals">
 
-	<div>Book Goals</div>
+	<div class="header">Readable</div>
 	<ng-view></ng-view>
 
 <script src="scripts/xml2json.js"></script>
@@ -22,6 +22,8 @@
 	<script src="controllers/loginCtrl.js"></script>
 <!-- Services -->
 	<script src="services/goodreadsService.js"></script>
+
+	<script src="directives/modalDialog.js"></script>
 
 </body>
 </html>
