--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular-route.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular-route.js"></script>
   <script src="bower_components/angularjs-datepicker/src/js/angular-datepicker.js"></script>
+<!-- Moment -->
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js"></script>
 <!-- App -->
 	<script src="app.js"></script>
 <!-- Controllers -->
