--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,10 @@
 	<link rel="stylesheet" href="normalize.css">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="bower_components/angularjs-datepicker/src/css/angular-datepicker.css">
+	<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 </head>
 <body ng-app="readingGoals">
-
-	<div class="header">Readable</div>
-	<ng-view></ng-view>
-	
+		<ng-view></ng-view>
 <!-- XML to Json conversion -->
 	<script src="scripts/xml2json.js"></script>
 <!-- Angular -->
