progress bar (wrong input data)

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Readable</title>
 	<link rel="stylesheet" href="normalize.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="bower_components/angularjs-datepicker/src/css/angular-datepicker.css">
 	<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
@@ -16,6 +17,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular-route.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular-route.js"></script>
   <script src="bower_components/angularjs-datepicker/src/js/angular-datepicker.js"></script>
+
+  <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+<!-- Count To -->
+  <script src="directives/countTo.js"></script>
 <!-- Moment -->
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js"></script>
 <!-- App -->
