--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="bower_components/angularjs-datepicker/src/css/angular-datepicker.css">
 	<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:100,400' rel='stylesheet' type='text/css'>
 </head>
 <body ng-app="readingGoals">
 		<ng-view></ng-view>
