creating user and book schemas

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,8 @@
 	<script src="controllers/loginCtrl.js"></script>
 <!-- Services -->
 	<script src="services/goodreadsService.js"></script>
+	<script src="services/userService.js"></script>
+	<script src="services/bookService.js"></script>
 <!-- Directives -->
 	<script src="directives/modalDialog.js"></script>
 
